--- a/new_ec/rwd/include/css/usedL.css
+++ b/new_ec/rwd/include/css/usedL.css
@@ -4,7 +4,7 @@
 
 position: relative;
 width: 100%;
-text-align: center;
+text-align: left;
 margin: 0 auto;
 padding: 15px 10px;
 overflow: hidden;
