--- a/new_ec/rwd/include/css/usedL.css
+++ b/new_ec/rwd/include/css/usedL.css
@@ -8,12 +8,12 @@ text-align: left;
 margin: 0 auto;
 padding: 15px 10px;
 overflow: hidden;
-height: 80px;
+height: 160px;
 /* "transparent" only works here because == rgba(0,0,0,0) */
 text-overflow: ellipsis;
 position: relative;
 }
-.read-more::after{ content: ''; width: 100%; height: 60px; background: linear-gradient(0deg, rgba(255,255,255,1) 10%,rgba(255,255,255,0) 100%); display: inline-block;position: absolute; bottom: 0; left: 0;  z-index: 9;}
+.read-more::after{ content: ''; width: 100%; height: 60px;  display: inline-block;position: absolute; bottom: 0; left: 0;  z-index: 9;}
 .read-more.open{height: auto;}
 .read-more.open::after{ display: none;}
 
